[package]
name = "test-lang"
version = "0.1.0"
#edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test-lang"
path = "src/test_rust.rs"

[dependencies]

[profile.release]
debug = false
lto = true
codegen-units = 16
opt-level = "z"
